feat: office — rename Steffan's Lab to CD Office, remove crypto/NFTs/Solana label

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="sprite-label">Steffan</div>
   <img src="avatar.jpg" alt="Steffan" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%2300d084%22/><text x=%2250%25%22 y=%2255%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-size=%2224%22>🐒</text></svg>'">
   <div class="sprite-status" id="sprite-status-txt">analyzing...</div>
-</div><div class="office-overlay"><div class="office-label"><span>Steffan's Lab</span>Crypto &middot; NFTs &middot; Solana</div><div style="font-size:0.62rem;color:var(--text2)" id="office-time">--</div></div></div></div></div><div id="view-markets" class="view"><div class="panel-inner"><div style="color:var(--text4);font-size:0.62rem;letter-spacing:1px;text-transform:uppercase;margin-bottom:8px">Live Prices</div><div class="cards-grid">
+</div><div class="office-overlay"><div class="office-label"><span>CD Office</span></div><div style="font-size:0.62rem;color:var(--text2)" id="office-time">--</div></div></div></div></div><div id="view-markets" class="view"><div class="panel-inner"><div style="color:var(--text4);font-size:0.62rem;letter-spacing:1px;text-transform:uppercase;margin-bottom:8px">Live Prices</div><div class="cards-grid">
 <div class="card"><div class="label">SOL</div><div class="value" id="m-sol">--</div><div class="change" id="m-sol-chg">--</div></div>
 <div class="card"><div class="label">BTC</div><div class="value" id="m-btc">--</div><div class="change" id="m-btc-chg">--</div></div>
 <div class="card"><div class="label">ETH</div><div class="value" id="m-eth">--</div><div class="change" id="m-eth-chg">--</div></div>
