--- a/index.html
+++ b/index.html
@@ -62,7 +62,18 @@
 <div class="agent-status-badge offline-badge" id="agent-badge">
   <div class="sdot"></div><span class="stxt" id="agent-badge-txt">Offline</span>
 </div>
-</div><nav class="nav"><div class="nav-section">Base</div><a class="nav-item active" href="#" data-view="office" onclick="showView(this);return false;"><span class="icon">&#127968;</span><span>Virtual Office</span></a><a class="nav-item" href="#" data-view="markets" onclick="showView(this);return false;"><span class="icon">&#128200;</span><span>Markets</span></a><div class="nav-section">Tools</div><a class="nav-item" href="#" data-view="portfolio" onclick="showView(this);return false;"><span class="icon">&#128188;</span><span>Portfolio</span></a><a class="nav-item" href="#" data-view="orders" onclick="showView(this);return false;"><span class="icon">&#9889;</span><span>Orders</span></a><div class="nav-section">System</div><a class="nav-item" href="#" data-view="logs" onclick="showView(this);return false;"><span class="icon">&#128187;</span><span>Agent Log</span></a></nav><div class="sidebar-footer"><div class="status-row"><div class="dot"></div><span id="sidebar-time">--</span></div><button class="theme-toggle" onclick="toggleTheme()" id="theme-btn2">&#9790; Light</button><div class="sf-detail" style="margin-top:4px;color:var(--text4)">seekerclaw.xyz</div></div></div><div class="content"><div id="view-office" class="view active"><div class="office-container"><div class="office-frame"><div class="office-img-wrap"><div class="scan-line"></div><img class="office-img" src="office.jpg" alt="Virtual Office"></div>
+</div><nav class="nav"><div class="nav-section">Base</div><a class="nav-item active" href="#" data-view="office" onclick="showView(this);return false;"><span class="icon">&#127968;</span><span>Virtual Office</span></a><a class="nav-item" href="#" data-view="markets" onclick="showView(this);return false;"><span class="icon">&#128200;</span><span>Markets</span></a><div class="nav-section">Tools</div><a class="nav-item" href="#" data-view="portfolio" onclick="showView(this);return false;"><span class="icon">&#128188;</span><span>Portfolio</span></a><a class="nav-item" href="#" data-view="orders" onclick="showView(this);return false;"><span class="icon">&#9889;</span><span>Orders</span></a><div class="nav-section">System</div><a class="nav-item" href="#" data-view="logs" onclick="showView(this);return false;"><span class="icon">&#128187;</span><span>Agent Log</span></a></nav><div class="sidebar-footer"><div class="status-row"><div class="dot"></div><span id="sidebar-time">--</span></div><button class="theme-toggle" onclick="toggleTheme()" id="theme-btn2">&#9790; Light</button><div class="sf-detail" style="margin-top:4px;color:var(--text4)">seekerclaw.xyz</div></div></div><div class="content"><div id="view-office" class="view active"><div class="office-container">
+<!-- NEWS FEED STRIP (moved to top) -->
+<div class="news-strip" id="news-strip" style="margin-bottom:8px;margin-top:0;">
+  <div class="news-strip-header">
+    <div style="display:flex;align-items:center;gap:6px;"><div class="ns-dot"></div><span class="ns-label">📡 Global Signal Feed</span></div>
+    <span class="ns-src" id="ns-updated">loading...</span>
+  </div>
+  <div class="news-items" id="news-items">
+    <div class="news-loading">Fetching feed...</div>
+  </div>
+</div>
+<div class="office-frame"><div class="office-img-wrap"><div class="scan-line"></div><img class="office-img" src="office.jpg" alt="Virtual Office"></div>
 
 <div class="agent-sprite idle visible" id="agent-sprite" style="left:10%;top:55%;">
   <div class="sprite-bubble" id="sprite-bubble"></div>
@@ -70,16 +81,6 @@
   <img src="avatar.jpg" alt="Steffan" onerror="this.src='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%2300d084%22/><text x=%2250%25%22 y=%2255%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-size=%2224%22>🐒</text></svg>'">
   <div class="sprite-status" id="sprite-status-txt">analyzing...</div>
 </div><div class="office-overlay"><div class="office-label"><span>CD Office</span></div><div style="font-size:0.62rem;color:var(--text2)" id="office-time">--</div></div>
-</div>
-<!-- NEWS FEED STRIP (test) -->
-<div class="news-strip" id="news-strip">
-  <div class="news-strip-header">
-    <div style="display:flex;align-items:center;gap:6px;"><div class="ns-dot"></div><span class="ns-label">📡 Signal Feed</span></div>
-    <span class="ns-src" id="ns-updated">loading...</span>
-  </div>
-  <div class="news-items" id="news-items">
-    <div class="news-loading">Fetching feed...</div>
-  </div>
 </div></div><div id="view-markets" class="view"><div class="panel-inner"><div style="color:var(--text4);font-size:0.62rem;letter-spacing:1px;text-transform:uppercase;margin-bottom:8px">Live Prices</div><div class="cards-grid">
 <div class="card"><div class="label">SOL</div><div class="value" id="m-sol">--</div><div class="change" id="m-sol-chg">--</div></div>
 <div class="card"><div class="label">BTC</div><div class="value" id="m-btc">--</div><div class="change" id="m-btc-chg">--</div></div>
