fix: reduce snap threshold + scrollable news
- Snap threshold: 15% -> 8% (less aggressive)
- News feed: scrollable overflow

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 .news-strip-header .ns-label{font-size:0.55rem;color:var(--text3);text-transform:uppercase;letter-spacing:2px;}
 .news-strip-header .ns-dot{width:5px;height:5px;border-radius:50%;background:var(--up);animation:pulse 2s infinite;flex-shrink:0;}
 .news-strip-header .ns-src{font-size:0.52rem;color:var(--text4);}
-.news-items{overflow:hidden;flex:1;display:flex;flex-direction:column;gap:4px;padding:8px 12px;}
+.news-items{overflow-y:auto;flex:1;display:flex;flex-direction:column;gap:4px;padding:8px 12px;}
 .news-item{display:flex;gap:8px;padding:10px 12px;border-radius:6px;cursor:pointer;text-decoration:none;transition:all 0.3s;background:var(--bg3);opacity:0;transform:translateY(10px);animation:slideIn 0.4s ease forwards;}
 .news-item:hover{background:var(--border);transform:translateX(4px);}
 .news-item .ni-source{font-size:0.58rem;color:var(--accent);text-transform:uppercase;letter-spacing:1px;flex-shrink:0;min-width:70px;font-weight:bold;}
