--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
   <div class="sprite-status" id="sprite-status-txt">analyzing...</div>
 </div><div class="office-overlay"><div class="office-label"><span>CD Office</span></div><div style="font-size:0.62rem;color:var(--text2)" id="office-time">--</div></div>
 
+
+</div>
 <!-- MARKETS WIDGET -->
 <div class="office-widget markets-widget" id="widget-markets" data-widget-id="markets">
   <div class="office-header">Live Markets</div>
@@ -106,8 +108,7 @@
     <div class="market-item"><div class="sym">GBOY</div><div class="price" id="mw-gboy">--</div><div class="chg" id="mw-gboy-chg">--</div></div>
     <div class="market-item"><div class="sym">NOBODY</div><div class="price" id="mw-nobody">--</div><div class="chg" id="mw-nobody-chg">--</div></div>
   </div>
-</div>
-</div></div><div id="view-markets" class="view"><div class="panel-inner"><div style="color:var(--text4);font-size:0.62rem;letter-spacing:1px;text-transform:uppercase;margin-bottom:8px">Live Prices</div><div class="cards-grid">
+</div><div id="view-markets" class="view"><div class="panel-inner"><div style="color:var(--text4);font-size:0.62rem;letter-spacing:1px;text-transform:uppercase;margin-bottom:8px">Live Prices</div><div class="cards-grid">
 <div class="card"><div class="label">SOL</div><div class="value" id="m-sol">--</div><div class="change" id="m-sol-chg">--</div></div>
 <div class="card"><div class="label">BTC</div><div class="value" id="m-btc">--</div><div class="change" id="m-btc-chg">--</div></div>
 <div class="card"><div class="label">ETH</div><div class="value" id="m-eth">--</div><div class="change" id="m-eth-chg">--</div></div>
